--- a/draft-frontend/package.json
+++ b/draft-frontend/package.json
@@ -2,6 +2,8 @@
   "name": "draft-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-string-format": "^1.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
