--- a/docker/dev.yml
+++ b/docker/dev.yml
@@ -1,31 +1,10 @@
 version: '3'
 services:
-  mongodb:
-    image: mongodb/mongodb-community-server:6.0-ubi8
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=admin
-      - MONGO_INITDB_DATABASE=pokemon-draft
+  web:
+    image: nginx
     volumes:
-        - ./data/:/data/db:rw
+      - ./templates:/etc/nginx/templates
     ports:
-      - '27017:27017'
-    networks:
-      - mongo
-  mongo-express:
-    depends_on:
-      - mongodb
-    image: mongo-express:1.0.0-alpha.4
-    restart: unless-stopped
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
-      ME_CONFIG_MONGODB_ADMINPASSWORD: admin
-      ME_CONFIG_MONGODB_SERVER: mongo
-      ME_CONFIG_MONGODB_PORT: "27017"
-    ports:
-      - '8081:8081'
-    networks:
-      - mongo      
-networks:
-  mongo:
-    driver: bridge
+      - "8080:8080"
+    environment: {}
+networks: {}
