--- a/docker/nginx.d/pokedraft-prod.conf
+++ b/docker/nginx.d/pokedraft-prod.conf
@@ -3,10 +3,10 @@ server {
     server_name pokedraft.animebookclub.moe;
 
     location /api/v1/ {
-        proxy_pass http://localhost:8000;
+        proxy_pass http://app:8000;
     }
 
     location / {
-        proxy_pass http://localhost:8080;
+        proxy_pass http://gui:8080;
     }
 }
