Fix github actions workflow

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,4 +30,7 @@ jobs:
         echo VERSION="v$VERSION"
         docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
         docker push $IMAGE_ID:$VERSION
-        [ "$BRANCH_NAME" == "main" ] && docker tag $IMAGE_NAME $IMAGE_ID:latest && docker push $IMAGE_ID:latest
+        if [ "$BRANCH_NAME" == "main" ]; then 
+          docker tag $IMAGE_NAME $IMAGE_ID:latest 
+          docker push $IMAGE_ID:latest
+        fi
